--- a/src/tools/ToolKit.form
+++ b/src/tools/ToolKit.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="tools.ToolKit">
-  <grid id="27dc6" binding="jPanelToolkit" layout-manager="GridLayoutManager" row-count="15" column-count="9" same-size-horizontally="false" same-size-vertically="false" hgap="10" vgap="10">
+  <grid id="27dc6" binding="jPanelToolkit" layout-manager="GridLayoutManager" row-count="9" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="10" vgap="10">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="2567" height="628"/>
+      <xy x="20" y="20" width="794" height="484"/>
     </constraints>
     <properties>
       <autoscrolls value="true"/>
@@ -26,8 +26,10 @@
     <children>
       <component id="8d79c" class="javax.swing.JTextField" binding="textCheckDigit">
         <constraints>
-          <grid row="5" column="3" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+          <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="200" height="-1"/>
+            <preferred-size width="200" height="-1"/>
+            <maximum-size width="200" height="-1"/>
           </grid>
         </constraints>
         <properties>
@@ -45,7 +47,7 @@
       </component>
       <component id="c311a" class="javax.swing.JButton" binding="btnCheckDigit">
         <constraints>
-          <grid row="5" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <borderPainted value="true"/>
@@ -65,8 +67,10 @@
       </component>
       <component id="b3327" class="javax.swing.JTextField" binding="textJulianDate">
         <constraints>
-          <grid row="7" column="3" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+          <grid row="4" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="200" height="-1"/>
+            <preferred-size width="200" height="-1"/>
+            <maximum-size width="200" height="-1"/>
           </grid>
         </constraints>
         <properties>
@@ -84,7 +88,7 @@
       </component>
       <component id="e768d" class="javax.swing.JButton" binding="btnJulianDate">
         <constraints>
-          <grid row="7" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <contentAreaFilled value="false"/>
@@ -95,8 +99,10 @@
       </component>
       <component id="91ee2" class="javax.swing.JTextField" binding="textRelativeDate">
         <constraints>
-          <grid row="9" column="3" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+          <grid row="5" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="200" height="-1"/>
+            <preferred-size width="200" height="-1"/>
+            <maximum-size width="200" height="-1"/>
           </grid>
         </constraints>
         <properties>
@@ -113,7 +119,7 @@
       </component>
       <component id="7f162" class="javax.swing.JButton" binding="btnRelativeDate">
         <constraints>
-          <grid row="9" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <contentAreaFilled value="false"/>
@@ -122,19 +128,13 @@
           <text value="&amp;R-Convert"/>
         </properties>
       </component>
-      <hspacer id="65ba3">
-        <constraints>
-          <grid row="6" column="1" row-span="1" col-span="7" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
-      <hspacer id="6df7c">
-        <constraints>
-          <grid row="8" column="1" row-span="1" col-span="7" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
       <component id="81bea" class="javax.swing.JComboBox" binding="comboVM">
         <constraints>
-          <grid row="1" column="3" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="200" height="-1"/>
+            <preferred-size width="200" height="-1"/>
+            <maximum-size width="200" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <autoscrolls value="true"/>
@@ -149,14 +149,9 @@
           <toolTipText value="Select VMs"/>
         </properties>
       </component>
-      <hspacer id="147f6">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="7" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
       <component id="904b" class="javax.swing.JLabel" binding="jLCheckDigit">
         <constraints>
-          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="300" height="-1"/>
             <preferred-size width="300" height="-1"/>
             <maximum-size width="300" height="-1"/>
@@ -173,7 +168,7 @@
       </component>
       <component id="5090b" class="javax.swing.JLabel" binding="jLJulianDate">
         <constraints>
-          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="300" height="-1"/>
             <preferred-size width="300" height="-1"/>
             <maximum-size width="300" height="-1"/>
@@ -188,7 +183,7 @@
       </component>
       <component id="c4ea" class="javax.swing.JLabel" binding="jLRelativeDate">
         <constraints>
-          <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="300" height="-1"/>
             <preferred-size width="300" height="-1"/>
             <maximum-size width="300" height="-1"/>
@@ -203,7 +198,7 @@
       </component>
       <component id="e3030" class="javax.swing.JTextArea" binding="textAreaResult">
         <constraints>
-          <grid row="14" column="1" row-span="1" col-span="7" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="8" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="666" height="-1"/>
             <preferred-size width="666" height="100"/>
             <maximum-size width="666" height="-1"/>
@@ -224,7 +219,7 @@
       </component>
       <component id="34118" class="javax.swing.JLabel" binding="jLLaunchCad">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="300" height="-1"/>
             <preferred-size width="300" height="-1"/>
             <maximum-size width="300" height="-1"/>
@@ -239,7 +234,7 @@
       </component>
       <component id="bd30f" class="javax.swing.JButton" binding="btnLaunchCad">
         <constraints>
-          <grid row="2" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <contentAreaFilled value="false"/>
@@ -250,7 +245,11 @@
       </component>
       <component id="e65a7" class="javax.swing.JComboBox" binding="comboUser">
         <constraints>
-          <grid row="2" column="3" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="200" height="-1"/>
+            <preferred-size width="200" height="-1"/>
+            <maximum-size width="200" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <autoscrolls value="true"/>
@@ -267,34 +266,9 @@
           <toolTipText value="Select User"/>
         </properties>
       </component>
-      <hspacer id="d8f48">
-        <constraints>
-          <grid row="10" column="1" row-span="1" col-span="7" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
-      <vspacer id="84145">
-        <constraints>
-          <grid row="0" column="8" row-span="15" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
-      <vspacer id="a6deb">
-        <constraints>
-          <grid row="0" column="0" row-span="15" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
-      <vspacer id="4497f">
-        <constraints>
-          <grid row="0" column="6" row-span="2" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
-      <vspacer id="db1e0">
-        <constraints>
-          <grid row="0" column="2" row-span="2" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
       <component id="7808d" class="javax.swing.JLabel" binding="jLPort">
         <constraints>
-          <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="300" height="-1"/>
             <preferred-size width="300" height="-1"/>
             <maximum-size width="300" height="-1"/>
@@ -308,7 +282,7 @@
       </component>
       <component id="aa3ad" class="javax.swing.JButton" binding="btnPort">
         <constraints>
-          <grid row="11" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <contentAreaFilled value="false"/>
@@ -319,7 +293,7 @@
       </component>
       <component id="1f40e" class="javax.swing.JLabel" binding="jLRecyclePort">
         <constraints>
-          <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="300" height="-1"/>
             <preferred-size width="300" height="-1"/>
             <maximum-size width="300" height="-1"/>
@@ -333,8 +307,10 @@
       </component>
       <component id="50a05" class="javax.swing.JTextField" binding="textPort">
         <constraints>
-          <grid row="12" column="3" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+          <grid row="7" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="200" height="-1"/>
+            <preferred-size width="200" height="-1"/>
+            <maximum-size width="200" height="-1"/>
           </grid>
         </constraints>
         <properties>
@@ -352,7 +328,7 @@
       </component>
       <component id="ed9a7" class="javax.swing.JButton" binding="btnRPort">
         <constraints>
-          <grid row="12" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <contentAreaFilled value="false"/>
@@ -363,7 +339,7 @@
       </component>
       <component id="8e8a" class="javax.swing.JButton" binding="btnCredentials">
         <constraints>
-          <grid row="1" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <contentAreaFilled value="false"/>
@@ -374,10 +350,10 @@
       </component>
       <component id="51d2a" class="javax.swing.JButton" binding="btnMngCad">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <minimum-size width="280" height="-1"/>
-            <preferred-size width="280" height="-1"/>
-            <maximum-size width="280" height="-1"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="270" height="-1"/>
+            <preferred-size width="270" height="-1"/>
+            <maximum-size width="270" height="-1"/>
           </grid>
         </constraints>
         <properties>
@@ -385,6 +361,48 @@
           <font swing-font="Button.font"/>
           <foreground color="-1"/>
           <text value="&amp;Manage Cadencie Credentials"/>
+        </properties>
+      </component>
+      <component id="651a4" class="javax.swing.JLabel" binding="jLCurrUsr">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-12828863"/>
+          <font name="Century Gothic" size="14" style="2"/>
+          <foreground color="-1"/>
+          <text value="I am going to use this VM with this Employ Code"/>
+        </properties>
+      </component>
+      <component id="84b2f" class="javax.swing.JCheckBox" binding="checkYes">
+        <constraints>
+          <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-12236470"/>
+          <font name="Century Gothic" size="14" style="0"/>
+          <foreground color="-1"/>
+          <text value="&amp;Being used"/>
+          <toolTipText value="Type Your Name First, then click it on"/>
+        </properties>
+      </component>
+      <component id="23a4f" class="javax.swing.JTextField" binding="typeYourNameTextField" default-binding="true">
+        <constraints>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="4" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="127" height="-1"/>
+            <preferred-size width="127" height="-1"/>
+            <maximum-size width="127" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <background color="-12828863"/>
+          <caretColor color="-1"/>
+          <disabledTextColor color="-1"/>
+          <font name="Century Gothic" size="14" style="0"/>
+          <foreground color="-1"/>
+          <selectedTextColor color="-1"/>
+          <selectionColor color="-15766017"/>
+          <text value="Type Your Name"/>
         </properties>
       </component>
     </children>
