--- a/src/tools/ToolKit.form
+++ b/src/tools/ToolKit.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="tools.ToolKit">
-  <grid id="27dc6" binding="jPanelToolkit" layout-manager="GridLayoutManager" row-count="9" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="10" vgap="10">
+  <grid id="27dc6" binding="jPanelToolkit" layout-manager="GridLayoutManager" row-count="9" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="10" vgap="10">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="794" height="484"/>
+      <xy x="20" y="20" width="824" height="484"/>
     </constraints>
     <properties>
       <autoscrolls value="true"/>
@@ -26,7 +26,7 @@
     <children>
       <component id="8d79c" class="javax.swing.JTextField" binding="textCheckDigit">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="3" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="-1"/>
             <preferred-size width="200" height="-1"/>
             <maximum-size width="200" height="-1"/>
@@ -47,7 +47,7 @@
       </component>
       <component id="c311a" class="javax.swing.JButton" binding="btnCheckDigit">
         <constraints>
-          <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <borderPainted value="true"/>
@@ -67,7 +67,7 @@
       </component>
       <component id="b3327" class="javax.swing.JTextField" binding="textJulianDate">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="4" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="-1"/>
             <preferred-size width="200" height="-1"/>
             <maximum-size width="200" height="-1"/>
@@ -88,7 +88,7 @@
       </component>
       <component id="e768d" class="javax.swing.JButton" binding="btnJulianDate">
         <constraints>
-          <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <contentAreaFilled value="false"/>
@@ -99,7 +99,7 @@
       </component>
       <component id="91ee2" class="javax.swing.JTextField" binding="textRelativeDate">
         <constraints>
-          <grid row="5" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="5" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="-1"/>
             <preferred-size width="200" height="-1"/>
             <maximum-size width="200" height="-1"/>
@@ -119,7 +119,7 @@
       </component>
       <component id="7f162" class="javax.swing.JButton" binding="btnRelativeDate">
         <constraints>
-          <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <contentAreaFilled value="false"/>
@@ -130,7 +130,7 @@
       </component>
       <component id="81bea" class="javax.swing.JComboBox" binding="comboVM">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="0" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="-1"/>
             <preferred-size width="200" height="-1"/>
             <maximum-size width="200" height="-1"/>
@@ -198,7 +198,7 @@
       </component>
       <component id="e3030" class="javax.swing.JTextArea" binding="textAreaResult">
         <constraints>
-          <grid row="8" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="8" column="0" row-span="1" col-span="5" vsize-policy="0" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="666" height="-1"/>
             <preferred-size width="666" height="100"/>
             <maximum-size width="666" height="-1"/>
@@ -234,7 +234,7 @@
       </component>
       <component id="bd30f" class="javax.swing.JButton" binding="btnLaunchCad">
         <constraints>
-          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <contentAreaFilled value="false"/>
@@ -245,7 +245,7 @@
       </component>
       <component id="e65a7" class="javax.swing.JComboBox" binding="comboUser">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="-1"/>
             <preferred-size width="200" height="-1"/>
             <maximum-size width="200" height="-1"/>
@@ -283,7 +283,7 @@
       </component>
       <component id="aa3ad" class="javax.swing.JButton" binding="btnPort">
         <constraints>
-          <grid row="6" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <contentAreaFilled value="false"/>
@@ -308,7 +308,7 @@
       </component>
       <component id="50a05" class="javax.swing.JTextField" binding="textPort">
         <constraints>
-          <grid row="7" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="7" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="-1"/>
             <preferred-size width="200" height="-1"/>
             <maximum-size width="200" height="-1"/>
@@ -329,7 +329,7 @@
       </component>
       <component id="ed9a7" class="javax.swing.JButton" binding="btnRPort">
         <constraints>
-          <grid row="7" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <contentAreaFilled value="false"/>
@@ -340,7 +340,7 @@
       </component>
       <component id="8e8a" class="javax.swing.JButton" binding="btnCredentials">
         <constraints>
-          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <contentAreaFilled value="false"/>
@@ -366,33 +366,34 @@
       </component>
       <component id="651a4" class="javax.swing.JLabel" binding="jLCurrUsr">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-12828863"/>
+          <enabled value="true"/>
           <font name="Century Gothic" size="14" style="2"/>
           <foreground color="-1"/>
-          <text value="I am going to use this VM with this Employ Code"/>
+          <text value="Current In Use"/>
         </properties>
       </component>
       <component id="84b2f" class="javax.swing.JCheckBox" binding="checkYes">
         <constraints>
-          <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-12236470"/>
           <font name="Century Gothic" size="14" style="0"/>
           <foreground color="-1"/>
-          <text value="&amp;Being used"/>
+          <text value="&amp;Yes"/>
           <toolTipText value="Type Your Name First, then click it on"/>
         </properties>
       </component>
       <component id="23a4f" class="javax.swing.JTextField" binding="typeYourNameTextField" default-binding="true">
         <constraints>
-          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="4" fill="0" indent="0" use-parent-layout="false">
-            <minimum-size width="127" height="-1"/>
-            <preferred-size width="127" height="-1"/>
-            <maximum-size width="127" height="-1"/>
+          <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="4" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="136" height="-1"/>
+            <preferred-size width="136" height="-1"/>
+            <maximum-size width="136" height="-1"/>
           </grid>
         </constraints>
         <properties>
@@ -404,6 +405,16 @@
           <selectedTextColor color="-1"/>
           <selectionColor color="-15766017"/>
           <text value="Type Your Name"/>
+        </properties>
+      </component>
+      <component id="deccb" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Century Gothic" size="12" style="0"/>
+          <foreground color="-1"/>
+          <text value="Current User/Last User"/>
         </properties>
       </component>
     </children>
